--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'TECH a Look'
+name: 'TECH a Look!'
 description: 'If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips and Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
