added About Section
added About Section

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
       name:           Srini
       site:           https://www.srinivasakumar.com
       avatar:         /assets/images/avatar1.jpg
-      bio:            "I'm an Entrepreneur, SAP Developer, Flutter Mobile App Developer, Marketer and Photographer."
+      bio:            "I'm an Entrepreneur, SAP Developer, Flutter Mobile App Developer, Marketer and a Photographer."
       email:          srinivasakumar.a@live.com
       twitter:        https://twitter.com/ASrinivasaKumar
 
