added google analytics and cname file
added google analytics and cname file

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'TECH a Look!'
 description: 'If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips and Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: '/mundana-theme-jekyll'
+baseurl: 'https://www.srinivasakumar.com'
 disqus: 'pragna'
 email: 'srinivasakumar.a@live.com'
 mailchimp-list: 'https://github.us17.list-manage.com/subscribe/post?u=498d6dddeb9e551be969fb68c&amp;id=f74e1e2fb1'
