added https to http sites url references
added https to http sites url references

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: Srini
+      author: srini
       avatar: /assets/images/avatar1.jpg
 
   # all pages
